Make clj-async-profiler run on Java 9+.